--- a/Rohit_Master_Thesis/MastersThesis.tex
+++ b/Rohit_Master_Thesis/MastersThesis.tex
@@ -189,7 +189,8 @@ Finally my heartfelt thanks go to my family and friends for their unwavering sup
 % Fuer deutschsprachige Texte fast besser geeignet
 
 
-\bibliographystyle{natdin}
+%\bibliographystyle{natdin}
+\bibliographystyle{unsrtnat}
 
 \bibliography{bibliography}
 \addcontentsline{toc}{section}{Bibliography}
