--- a/Rohit_Master_Thesis/bibliography.bib
+++ b/Rohit_Master_Thesis/bibliography.bib
@@ -76,7 +76,6 @@
   author={Gong, Xiaoyuan and Bai, Yuewei and Liu, Yiqun and Mu, Hua},
   booktitle={Journal of Physics: Conference Series},
   volume={1684},
-  number={1},
   pages={012030},
   year={2020},
   organization={IOP Publishing}
@@ -190,7 +189,6 @@
   title={Pattern recognition and machine learning},
   author={Bishop, Christopher M and Nasrabadi, Nasser M},
   volume={4},
-  number={4},
   year={2006},
   publisher={Springer}
 }
@@ -434,13 +432,15 @@
 @misc{Anomalib2024,
     author       = {Anomalib},
     title        = {Anomalib Documentation},
-    url          = {https://anomalib.readthedocs.io/en/latest/index.html}
+    url          = {https://anomalib.readthedocs.io/en/latest/index.html},
+    year         = {2024}
 }
 
 @misc{openvino2024,
     author       = {OpenVINO Toolkit},
     title        = {OpenVINO Toolkit: Optimized Deep Learning Inference},
-    url          = {https://github.com/openvinotoolkit/openvino}
+    url          = {https://github.com/openvinotoolkit/openvino},
+    year         = {2024}
 }
 
 @article{FANG2020100980,
@@ -456,7 +456,8 @@
 @misc{IBM2024,
     author       = {IBM},
     title        = {What is image segmentation?},
-    url          = {https://www.ibm.com/topics/image-segmentation}
+    url          = {https://www.ibm.com/topics/image-segmentation},
+    year         = {2024}
 }
 
 @article{FAWCETT2006861,
@@ -496,6 +497,7 @@
     author       = {Stephen M. Walker II},
     title        = {Accuracy, Precision, Recall, and F1 Score - Explained},
     url          = {https://klu.ai/glossary/accuracy-precision-recall-f1},
+    year         = {2024}
 }
 
 @ARTICLE{9347460,
@@ -559,5 +561,6 @@
 @misc{geeksforgeeks-sup-unsup,
   author = {GeeksforGeeks},
   title = {Supervised and Unsupervised Learning},
-  url = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
+  url = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/},
+  year={2024}
 }
